# migration-fail-repro

./: Cargo.toml  h6QEnvsiX5HcgEqKt5PNLKkm4ztZHM9BxYFmEhw6pxf
src/: main.rs
